--- a/popup.html
+++ b/popup.html
@@ -4,18 +4,58 @@
     <title>Textarea Overlay</title>
     <style>
         body {
-            width: 200px;
+            width: 300px;
             padding: 10px;
         }
         #count {
             font-weight: bold;
             color: blue;
         }
+        .form-group {
+            margin-bottom: 15px;
+        }
+        label {
+            display: block;
+            margin-bottom: 5px;
+        }
+        input, select {
+            width: 100%;
+            padding: 5px;
+            margin-bottom: 10px;
+        }
+        button {
+            background: #4285f4;
+            color: white;
+            border: none;
+            padding: 8px 15px;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+        button:hover {
+            background: #3367d6;
+        }
     </style>
 </head>
 <body>
     <h3>Textarea Overlay</h3>
     <p>Found <span id="count">0</span> textareas on this page.</p>
+
+    <div class="form-group">
+        <label for="apiKey">API Key:</label>
+        <input type="password" id="apiKey" placeholder="Enter your API key">
+    </div>
+
+    <div class="form-group">
+        <label for="model">Model:</label>
+        <select id="model">
+            <option value="gpt-3.5-turbo">GPT-3.5 Turbo</option>
+            <option value="gpt-4">GPT-4</option>
+            <option value="claude-3-opus">Claude-3 Opus</option>
+            <option value="claude-3-sonnet">Claude-3 Sonnet</option>
+        </select>
+    </div>
+
+    <button id="saveSettings">Save Settings</button>
     <script src="popup.js"></script>
 </body>
 </html>
