--- a/src/popup.html
+++ b/src/popup.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Textarea Overlay</title>
+    <title>Chad</title>
     <style>
         body {
             width: 250px;
