--- a/src/popup.html
+++ b/src/popup.html
@@ -55,6 +55,11 @@
     </div>
 
     <div class="form-group">
+        <label for="customPrompt">Custom Prompt</label>
+        <textarea id="customPrompt" rows="5"></textarea>
+    </div>
+
+    <div class="form-group">
         <label for="apiKey">API Key:</label>
         <input type="password" id="apiKey" placeholder="Enter your API key">
     </div>
