style(popup.html): Refactor textarea rows attributes for better UX

--- a/src/popup.html
+++ b/src/popup.html
@@ -86,12 +86,12 @@
 
     <div class="form-group">
         <label for="customPrompt">Custom Prompt <span class="optional">(optional)</span></label>
-        <textarea id="customPrompt" rows="5" placeholder="Enter your custom prompt"></textarea>
+        <textarea id="customPrompt" placeholder="Enter your custom prompt"></textarea>
     </div>
 
     <div class="form-group">
         <label for="ignoredUrls">Ignored URLs <span class="optional">(separate by new line)</span></label>
-        <textarea id="ignoredUrls" rows="10" placeholder="Enter URLs to ignore"></textarea>
+        <textarea id="ignoredUrls" placeholder="Enter URLs to ignore"></textarea>
     </div>
 
     <button id="saveSettings">Save Settings</button>
