--- a/src/popup.html
+++ b/src/popup.html
@@ -16,7 +16,7 @@
         }
 
         .form-group {
-            margin-bottom: 10px;
+            margin-bottom: 5px;
         }
 
         .form-group label {
@@ -34,7 +34,7 @@
         .form-group select,
         .form-group textarea {
             width: 100%;
-            padding: 8px;
+            padding: 10px;
             margin-bottom: 10px;
             box-sizing: border-box;
             border: 1px solid #ccc;
@@ -49,7 +49,7 @@
 
         button {
             width: 100%;
-            padding: 10px;
+            padding: 8px;
             background-color: #4285f4;
             color: white;
             border: none;
@@ -94,7 +94,7 @@
         <textarea id="ignoredUrls" placeholder="Enter URLs to ignore"></textarea>
     </div>
 
-    <button id="saveSettings">Save Settings</button>
+    <button id="saveSettings">Save</button>
     <script src="popup.js"></script>
 </body>
 
