--- a/src/popup.html
+++ b/src/popup.html
@@ -80,7 +80,7 @@
     </div>
 
     <div class="form-group">
-        <label for="apiKey">API Key:</label>
+        <label for="apiKey">API Key: <span role="button" id="apiKeyToggle" class="optional" style="cursor: pointer;">(show)</span></label>
         <input type="password" id="apiKey" placeholder="Enter your API key">
     </div>
 
