--- a/src/popup.html
+++ b/src/popup.html
@@ -73,7 +73,7 @@
 
 <body>
     <div class="form-group">
-        <label for="model">Model:</label>
+        <label for="model">Model</label>
         <select id="model">
             <option value="gpt-3.5-turbo" selected>GPT-3.5 Turbo</option>
             <option value="gpt-4-turbo">GPT-4 Turbo</option>
@@ -82,7 +82,7 @@
     </div>
 
     <div class="form-group">
-        <label for="apiKey">API Key: <span role="button" id="apiKeyToggle" class="optional" style="cursor: pointer;">(show)</span></label>
+        <label for="apiKey">API Key <span role="button" id="apiKeyToggle" class="optional" style="cursor: pointer;">(show)</span></label>
         <input type="password" id="apiKey" placeholder="Enter your API key">
     </div>
 
