--- a/src/popup.html
+++ b/src/popup.html
@@ -7,28 +7,30 @@
     <title>Chad</title>
     <style>
         body {
-            width: 500px;
-            padding: 10px;
+            width: 350px;
+            padding: 20px;
             height: fit-content;
-            font-family: Arial, sans-serif;
-            background-color: #f9f9f9;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: #f4f4f9;
             color: #333;
+            margin: 0;
         }
 
         .form-group {
-            margin-bottom: 15px;
+            margin-bottom: 20px;
         }
 
         .form-group label {
             display: block;
-            font-weight: bold;
-            margin-bottom: 5px;
+            font-weight: 600;
+            margin-bottom: 8px;
             font-size: 14px;
+            color: #444;
         }
 
         .form-group .optional {
             color: #777;
-            font-weight: normal;
+            font-weight: 400;
             font-size: 12px;
         }
 
@@ -36,12 +38,21 @@
         .form-group select,
         .form-group textarea {
             width: 100%;
-            padding: 8px;
+            padding: 10px;
             margin-bottom: 10px;
             box-sizing: border-box;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            font-size: 13px;
+            border: 1px solid #ddd;
+            border-radius: 6px;
+            font-size: 14px;
+            background-color: #fff;
+            transition: border-color 0.3s ease;
+        }
+
+        .form-group input:focus,
+        .form-group select:focus,
+        .form-group textarea:focus {
+            border-color: #4285f4;
+            outline: none;
         }
 
         .form-group textarea {
@@ -51,13 +62,14 @@
 
         button {
             width: 100%;
-            padding: 10px;
+            padding: 12px;
             background-color: #4285f4;
             color: white;
             border: none;
-            border-radius: 4px;
+            border-radius: 6px;
             cursor: pointer;
             font-size: 14px;
+            font-weight: 600;
             transition: background-color 0.3s ease;
         }
 
@@ -69,55 +81,42 @@
             background-color: #2a56c7;
         }
 
-        .checkbox-wrapper {
-            display: flex;
-            align-items: center;
-            gap: 8px;
-            margin-bottom: 15px;
-        }
-
-        .checkbox-wrapper input[type="checkbox"] {
-            width: auto;
-            margin: 0;
-            cursor: pointer;
-        }
-
-        .checkbox-wrapper label {
-            padding: 0px;
-            margin: 0px;
-            display: inline;
-            cursor: pointer;
-        }
 
         .domain-selectors {
             max-height: 200px;
             overflow-y: auto;
-            background: white;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            padding: 8px;
+            background: #fff;
+            border: 1px solid #ddd;
+            border-radius: 6px;
+            padding: 10px;
             margin-bottom: 15px;
         }
 
         .domain-group {
-            margin-bottom: 5px;
+            margin-bottom: 10px;
         }
 
         .domain-name {
-            font-weight: bold;
-            margin-bottom: 5px;
+            font-weight: 600;
+            margin-bottom: 8px;
+            color: #444;
+            font-size: 14px;
         }
 
         .selector-item {
             display: flex;
-            align-items: center;
-            justify-content: space-between;
-            gap: 5px;
-            padding: 5px;
-            background: white;
-            border-radius: 4px;
-            margin-bottom: 4px;
-            border: 1px solid #ccc;
+            flex-direction: column;
+            gap: 10px;
+            padding: 10px;
+            background: #f9f9f9;
+            border-radius: 6px;
+            margin-bottom: 8px;
+            border: 1px solid #ddd;
+            transition: background-color 0.3s ease;
+        }
+
+        .selector-item:hover {
+            background-color: #f1f1f1;
         }
 
         .delete-selector {
@@ -125,10 +124,11 @@
             color: white;
             border: none;
             border-radius: 4px;
-            padding: 2px 6px;
+            padding: 5px 10px;
             width: fit-content;
             cursor: pointer;
             font-size: 12px;
+            transition: background-color 0.3s ease;
         }
 
         .delete-selector:hover {
@@ -138,7 +138,8 @@
         .no-selectors {
             color: #666;
             font-style: italic;
-            padding: 8px 0;
+            padding: 10px 0;
+            text-align: center;
         }
 
         .selector-info {
@@ -147,39 +148,43 @@
         }
 
         .selector-text {
-            font-weight: bold;
-            margin-bottom: 2px;
+            font-weight: 600;
+            margin-bottom: 4px;
+            color: #444;
+            font-size: 13px;
+        }
+
+        .url-container {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: 8px;
         }
 
         .url-text {
-            font-size: 11px;
+            font-size: 12px;
             color: #666;
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
         }
 
-        .selector-item {
-            padding: 8px;
-            background: #f5f5f5;
-            border-radius: 4px;
-            margin-bottom: 6px;
-        }
-
         .selector-prompt {
             width: 100%;
-            margin-top: 5px;
-            padding: 4px;
+            margin-top: 8px;
+            padding: 8px;
             font-size: 12px;
             border: 1px solid #ddd;
-            border-radius: 3px;
+            border-radius: 4px;
             resize: vertical;
-            min-height: 50px;
+            min-height: 60px;
+            background-color: #fff;
+            transition: border-color 0.3s ease;
         }
 
-        .selector-item {
-            padding: 10px;
-            margin-bottom: 10px;
+        .selector-prompt:focus {
+            border-color: #4285f4;
+            outline: none;
         }
     </style>
 </head>
